openshift/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: my-perfect-node-example-deploymentconfig-2020
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        traffic: "true"
    spec:
      containers:
        - image: docker-registry.default.svc:5000/kabanero/my-perfect-node-example-app:latest
          imagePullPolicy: Always
          name: my-perfect-node-example-app-2020
          ports:
            - containerPort: 3000
              protocol: "TCP"
          # command: ["/bin/sh", "-c", "while true ; do date; sleep 1; done;"]
  # triggers:
  # - type: ConfigChange
