openshift/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-perfect-node-example-service-2020
spec:
  selector:
    traffic: "true"
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
